--- a/components/AppDevelopmentCommon/GallerySection/styles.module.scss
+++ b/components/AppDevelopmentCommon/GallerySection/styles.module.scss
@@ -76,12 +76,7 @@
     @include flex(column, center, center);
 
     & > h3 {
-      font-weight: 400;
-      color: $silver-chalice;
       text-align: center;
-      margin-bottom: 40px;
-
-      @include fontSize(18px);
     }
 
     & > div {
@@ -286,6 +281,30 @@
 
     @include below-tablet {
       max-width: 343px;
+    }
+  }
+}
+
+.mobile-app-development-company {
+  background: $alabaster;
+  padding-top: 120px;
+
+  .callToAction {
+    background: $white;
+    padding: 70px;
+
+    h3 {
+      margin-top: 0;
+
+      @include below-tablet {
+        @include fontSize(18px);
+
+        line-height: 120%;
+      }
+    }
+
+    @include below-tablet {
+      padding: 24px;
     }
   }
 }
