--- a/components/AppDevelopmentCommon/ReviewsSection/styles.module.scss
+++ b/components/AppDevelopmentCommon/ReviewsSection/styles.module.scss
@@ -57,7 +57,8 @@
 .mvp-app-development-company,
 .cloud-based-app-development-services,
 .machine-learning-development-services,
-.chat-app-development-company {
+.chat-app-development-company,
+.mobile-app-development-company {
   background-color: $alabaster;
 }
 
